fix(feed-detail): comment not align

--- a/src/app/pages/main/feed-detail/feed-detail.page.scss
+++ b/src/app/pages/main/feed-detail/feed-detail.page.scss
@@ -110,7 +110,6 @@
             }
 
             footer {
-                position: fixed;
                 display: flex;
                 bottom: 8rem;
                 height: 2rem;
